# pca_analysis

./: .gitignore  README.md  log.md  notes.md  octave-workspace.REMOVED.git-id  out_file.nc.REMOVED.git-id  outlier_detection.ipynb  parafac2_experiment.ipynb  pyproject.toml  tensorly_parafac2_tutorial.ipynb  test_results.db.wal.REMOVED.git-id  tlviz_parafac_tutorial.ipynb
docs/: moc.md
pca_analysis/: chromatogram.py  chromviewer.py  db_to_cdf.py  decomposers.py  definitions.py  get_dataset.py  get_sample_data.py  parafac2_xr.py  peak_picking.py  peak_picking_viz.py  peak_picking_xr.py  pipeline_log  prepro.py  preprocessing_xr.py  run_etl_pipeline_raw.py  scratchpad.md  test.py  transformers.py  validation.py  xr_analysis.py  xr_plotly.py  xr_signal.py
pca_analysis/agilette/: __init__.py  agilette.py  run.py  runset.py
pca_analysis/cabernet/: __init__.py  cabernet.py  decomposition.py  rank_estimation.py  test_rank_estimation.py
pca_analysis/cabernet/shiraz/: decomposition.py  shiraz.py  temp.ipynb  transform.py  viz.py
pca_analysis/code/: get_sample_data.py  sampledata.py  zhang_gcms_toy_data.py
pca_analysis/code/bin_pumps_to_db/: __init__.py  bin_pump_to_db_.py  to_db.sql
pca_analysis/exp_manager/: cabernet.py
pca_analysis/experiments/: TOC.ipynb  Untitled.ipynb  constants.py  extracting_binary_pump_tables.ipynb  toc.py
pca_analysis/notebooks/: README.md  clustering.ipynb  main.ipynb
pca_analysis/notebooks/experiments/: README.md  camping_shopping_list.ipynb  component_ordering.ipynb  corcondia.ipynb  create_xarray_dset.ipynb  creating_bro_testset.ipynb  gross_time_alignment_on_last_peak.ipynb  octave-workspace.REMOVED.git-id  optimizing_parafac2_parameters.ipynb  outlier_detection.ipynb  parafac2_brute_force.ipynb  parafac2_brute_force.nbconvert.ipynb.REMOVED.git-id  parafac2_experiment.ipynb  parafac2_on_wine.ipynb  parafac2_on_wine.ipynb.REMOVED.git-id  parafac2_tensorly_demonstration.ipynb  partitioning_by_peak_clusters.ipynb  peak_finding_in_xarray_dataarrays.ipynb  peak_picking.ipynb  preprocessing_pipeline.ipynb  prototype_parafac2_pipeline.ipynb  reconstruction_compar.excalidraw  scaling_and_reconstruction.ipynb  tensorly_parafac2_tutorial.ipynb  test_bline_est.ipynb  test_bline_est.ipynb.REMOVED.git-id  test_notebook.ipynb  test_shiraz_dataset_selection.ipynb  tlviz_parafac_tutorial.ipynb  x_to_mat.py  zhang_2022_replication.ipynb  zhang_2022_replication.ipynb.REMOVED.git-id  zhang_experiment_find_peaks.py  zhang_gcms_experiment.ipynb  zhang_gcms_experiment_standardscaled.ipynb  zhang_gcms_experiment_standardscaled.ipynb.REMOVED.git-id  zhang_pca_scree_plot.py
pca_analysis/notebooks/notes/: component_ordering.ipynb  dash_notes.md  orm.md  parafac2_decomp_and_reconstruct.ipynb  random_notes.md  scikit_learn.md
pca_analysis/notebooks/projects/: project_parafac2.ipynb
pca_analysis/parafac2_pipeline/: add_images_to_db.py  bcorr_results.py  bcorrdb.py  core_tables.py  data.py  estimators.py  input_data.py  orm.py  parafac2_decomposition.py  parafac2_viz.py  parafac2db.py  parafac2postprocessing.py  pipeline.py  pipeline_log  results_db.py  utility.py
pca_analysis/preprocessing/: README.md  bcorr.py  partitioning.py  pipeline.py  smooth.py  unsharp_mask.py
tests/: README.md  conftest.py  create_database_etl_db.py  pickle_cache.py  test_agilette.py  test_definitions.py  test_parafac2_pipeline.py  test_peak_picking.py  test_raw_db.db.REMOVED.git-id  test_run.py  test_sample_tables_to_db.py  ~test_sample_tables_to_db.py
tests/cache/: decomp.REMOVED.git-id  pfac2_decomp_cache.REMOVED.git-id  pfac2_fit_trans.REMOVED.git-id  pfac2_ft.REMOVED.git-id
tests/test_cabernet/: conftest.py  test_cabernet.py  test_cabernet_viz.py  test_peak_viz.py  test_shiraz.py  test_transformation.py
tests/test_duckdb_orm/: test_duckdb_orm.py
tests/test_output/: test_db.db.REMOVED.git-id
tests/test_pickle_cache/: setup_test_caches.py  test_pickle_cache.py
tests/test_pickle_cache/test_cache/: obj1.pk
tests/test_pipeline/: __init__.py  _test_pipeline_cache.py  conftest.py  pipeline_output_con.db.REMOVED.git-id  test_dashboard.py  test_data.py  test_orc.py  test_parafac2.py  test_parafac2_pipeline.py  test_parafac2_results.py  test_pfac2_loader.py
tests/test_pipeline/pipeline_cache/: pfac2_ft.pk  pfac2_ft.pk.REMOVED.git-id
tests/test_samples/: solvcomp_45.csv  timetable_45.csv
tests/test_samples/013.D/: ACQRES.REG  CSlbk.ini  DAD1.UV  DAD1.UV.REMOVED.git-id  DAD1A.ch  DAD1B.ch  DAD1C.ch  DAD1D.ch  DAD1E.ch  DAD1F.ch  LCDIAG.REG.REMOVED.git-id  SAMPLE.XML  SAMPLE.XML.bak  acq.macaml  acq.txt  da.macaml  sequence.acam_  sequence.acam_.REMOVED.git-id
tests/test_samples/054.D/: ACQRES.REG  CSlbk.ini  DAD1.UV  DAD1.UV.REMOVED.git-id  DAD1A.ch  DAD1B.ch  DAD1C.ch  DAD1D.ch  (+11 more)
(+156 files in other folders)
