[tool.poetry]
name = "pca_analysis"
version = "0.1.0"
description = ""
authors = ["OctaneOolong <62565951+OctaneOolong@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
black = "^24.10.0"
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
polars = "^1.9.0"
pyarrow = "^17.0.0"
pyperclip = "^1.9.0"
python = "^3.12.2"
scipy = "^1.14.1"
pymatreader = "^1.0.0"
corcondia = "^0.1.1"
great-tables = "^0.11.0"
pytest = "^8.3.3"
project-toc = {git = "https://github.com/jonathanstathakis/project-toc.git"}
xarray = "^2024.9.0"
duckdb = "^1.1.1"
numpy = "^2.1.2"
ipython = "^8.27.0"
altair = "^5.4.1"
vegafusion = {extras = ["embed"], version = "^1.6.9"}
pybaselines = "^1.1.0"
plotly = "^5.24.1"
tensorly = {git = "https://github.com/tensorly/tensorly.git"}
scikit-learn = "^1.5.2"

dash = "^2.18.1"
dash-bootstrap-components = "^1.6.0"
duckdb-engine = "^0.13.4"
dash-extensions = "^1.0.18"
dash-ag-grid = "^31.2.0"
jupyter = "^1.1.1"
jupyterlab-quickopen = "^2.0.2"
nbmake = "^1.5.4"
database-etl = {path = "../database_etl", develop = true}
pytest-xdist = "^3.6.1"
nbstripout = "^0.8.1"
bottleneck = "^1.4.2"
hvplot = "^0.11.1"
jupyter-bokeh = "^4.0.5"
darkdetect = "^0.8.0"
tensorly-viz = "^0.1.7"
pooch = "^1.8.2"
cftime = "^1.6.4.post1"
nbdime = "^4.0.2"
sklearn-xarray = "^0.4.0"
netcdf4 = "^1.7.2"
h5netcdf = "^1.4.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.logging]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.scripts]
test_pipeline_cache = "tests.test_pipeline._test_pipeline_cache:start"
create_test_database = "tests.create_database_etl_db:create_database"

[tool.ruff.lint]
select = ["ALL"]
line-length = 120